<resources>
    <string name="app_name">中国传统色</string>
    <string name="color_name">颜色名</string>
    <string name="color_pinyin">拼音</string>
    <string name="color_hex">颜色值</string>
    <string name="color_Red">RED</string>
    <string name="color_Green">GREEN</string>
    <string name="color_Blue">BLUE</string>

    <string name="developer">开发者：</string>
    <string name="developer_name">LoneStar</string>
    <string name="color_source">颜色来源：</string>
    <string name="color_source_url">http://zhongguose.com/</string>
    <string name="font_source">字体来源：</string>
    <string name="font_source_url">http://www.zhaozi.cn/html/fonts/china/ruizibige/2015-03-29/22625.html</string>
    <string name="icon_source">图标来源：</string>
    <string name="icon_source_url">https://www.iconfont.cn/</string>

    <string name="delete_message">是否删除全部收藏颜色？</string>
    <string name="delete_cancel">取消</string>
    <string name="delete_approve">确认</string>

    <string name="menu_favorite">收藏</string>
    <string name="menu_about">关于</string>
    <string name="menu_delete">清除全部</string>
</resources>
